<resources>
    <string name="app_name">Repositórios Github</string>
    <string name="author">Autor</string>
    <string name="repository_name">Nome</string>
    <string name="description">Descrição</string>
    <string name="repository_photo">Foto do autor</string>
    <string name="star_description">Star</string>
    <string name="fork_description">Fork</string>
    <string name="forks_text">Este repositório tem mais de 1.000 forks</string>
</resources>