<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TextAppearance.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gray_dark"
    android:elevation="@dimen/dimen_12"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16">

        <ImageView
            android:id="@+id/repository_photo"
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            android:contentDescription="@string/repository_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_8"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/ic_size"
                android:layout_height="@dimen/ic_size"
                android:contentDescription="@string/star_description"
                android:src="@drawable/ic_star"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repository_stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_10"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/ic_size"
                android:layout_height="@dimen/ic_size"
                android:contentDescription="@string/fork_description"
                android:src="@drawable/ic_fork"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repository_forks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repository_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repository_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repository_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>