<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_10">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/dimen_12"
        card_view:cardBackgroundColor="@color/light_gray" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_8" >

            <ImageView
                android:layout_width="@dimen/photo_size"
                android:layout_height="@dimen/photo_size"
                android:id="@+id/repository_photo"
                android:contentDescription="@string/repository_photo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_8">

                <ImageView
                    android:layout_width="@dimen/ic_size"
                    android:layout_height="@dimen/ic_size"
                    android:textStyle="bold"
                    android:src="@drawable/ic_star"/>

                <TextView
                    android:id="@+id/repository_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_10" />

                <ImageView
                    android:layout_width="@dimen/ic_size"
                    android:layout_height="@dimen/ic_size"
                    android:textStyle="bold"
                    android:src="@drawable/ic_fork"/>

                <TextView
                    android:id="@+id/repository_forks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/dimen_8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repository_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="@dimen/dimen_8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository_name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repository_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="@dimen/dimen_8" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repository_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>